--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,17 +1,78 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<mat-toolbar color="primary">
-   <mat-toolbar-row>
-     <!--  <span>HOME</span> -->
-      <span><a href="/">HOME</a></span>
-      <span class="spacer"></span>
-      <a  mat-button  routerLink="/register">Register</a>
-      <a  mat-button  routerLink="/login">Login</a>
-   </mat-toolbar-row>
-</mat-toolbar>
-<router-outlet></router-outlet>
-
-
-
-
-
-
+<mat-sidenav-container>
+  <mat-sidenav  #sidenav role="navigation">
+    <mat-nav-list>
+	    <a mat-list-item
+			routelink = "/login">
+            <mat-icon class="icon">login</mat-icon>
+            <span class="label">Login</span>  
+        </a>
+		
+        <a mat-list-item
+         *ngIf="auth.isAuthenticated()"
+         routerLink="/">
+        <mat-icon class="icon">home</mat-icon>
+        <span class="label">Home</span>
+       </a>
+      <a mat-list-item
+         routerLink="/dashboard">
+        <mat-icon class="icon">dashboard</mat-icon>
+        <span class="label">Dashboard</span>
+      </a>
+	  
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <mat-toolbar color="primary">
+      <div fxHide.gt-xs>
+        <button mat-icon-button (click)="sidenav.toggle()">
+          <mat-icon>menu</mat-icon>
+        </button>
+      </div>
+      <div>
+        <p> UML DIAGRAM </p>
+      </div>
+      <div fxFlex fxLayout fxLayoutAlign="flex-end"  fxHide.xs>
+        <ul fxLayout fxLayoutGap="20px" class="navigation-items">
+          <li>
+            <a button mat-raised-button color="primary" routerLink="/login">
+           Login
+          </a>
+          </li>
+		  <li>
+            <a button mat-raised-button color="primary" routerLink="/register">
+				Sign Up
+            </a>
+          </li>
+		 
+          <li>
+            <a
+              *ngIf="auth.isAuthenticated()"
+              routerLink="/">
+              <mat-icon class="icon">home</mat-icon>
+              <span class="label">Home</span>
+            </a>
+          </li>
+          <li>
+            <a
+              routerLink="/dashboard">
+              <mat-icon class="icon">dashboard</mat-icon>
+              <span class="label">Dashboard</span>
+            </a>
+          </li>
+          <li>
+            <a
+              *ngIf="auth.isAuthenticated()"
+              (click)="auth.logout()" type="button"
+            >
+              <mat-icon class="icon">input</mat-icon>
+              <span class="label">LogOut</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </mat-toolbar>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+  </mat-sidenav-content>
+</mat-sidenav-container>
