--- a/client/src/app/registration-component/registration-component.component.html
+++ b/client/src/app/registration-component/registration-component.component.html
@@ -1,5 +1,5 @@
  <mat-toolbar>
-  <span>Registration</span>
+  <span class="title">SIGN UP</span>
 </mat-toolbar>
 <mat-card class="my-card">
    <mat-card-content>
@@ -25,17 +25,12 @@
             <input  matInput  placeholder="Password"  name="password">
          </mat-form-field>
          <section class="example-section">
-            <label class="full-width">Gender:</label>
+            
             <br>
             <br>
                     
          </section>
-         <mat-form-field class="full-width">
-            <mat-label>Date of Birth</mat-label>
-            <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-         </mat-form-field>
+        
       </form>
    </mat-card-content>
    <mat-card-actions>
