--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,16 +1,17 @@
 <mat-sidenav-container>
   <mat-sidenav  #sidenav role="navigation">
     <mat-nav-list>
-	    <a mat-list-item
+      <a mat-list-item
+      *ngIf="!auth.isLoggedIn()"
 			routelink = "/login">
-            <mat-icon class="icon">login</mat-icon>
-            <span class="label">Login</span>  
+            <mat-icon class="icon">login</mat-icon>&nbsp;
+            <span class="label">Login</span>
         </a>
-		
+
         <a mat-list-item
-         *ngIf="auth.isAuthenticated()"
+         *ngIf="auth.isLoggedIn()"
          routerLink="/">
-        <mat-icon class="icon">home</mat-icon>
+          <mat-icon class="icon">home</mat-icon>
         <span class="label">Home</span>
        </a>
       <a mat-list-item
@@ -18,7 +19,7 @@
         <mat-icon class="icon">dashboard</mat-icon>
         <span class="label">Dashboard</span>
       </a>
-	  
+
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -34,38 +35,23 @@
       <div fxFlex fxLayout fxLayoutAlign="flex-end"  fxHide.xs>
         <ul fxLayout fxLayoutGap="20px" class="navigation-items">
           <li>
-            <a button mat-raised-button color="primary" routerLink="/login">
+            <a button mat-raised-button *ngIf="!auth.isLoggedIn()" color="primary" routerLink="/login">
            Login
           </a>
           </li>
 		  <li>
-            <a button mat-raised-button color="primary" routerLink="/register">
+            <a button mat-raised-button *ngIf="!auth.isLoggedIn()" color="primary" routerLink="/register">
 				Sign Up
             </a>
           </li>
-		 
+
           <li>
             <a
-              *ngIf="auth.isAuthenticated()"
-              routerLink="/">
-              <mat-icon class="icon">home</mat-icon>
-              <span class="label">Home</span>
-            </a>
-          </li>
-          <li>
-            <a
-              routerLink="/dashboard">
-              <mat-icon class="icon">dashboard</mat-icon>
-              <span class="label">Dashboard</span>
-            </a>
-          </li>
-          <li>
-            <a
-              *ngIf="auth.isAuthenticated()"
-              (click)="auth.logout()" type="button"
+              *ngIf="auth.isLoggedIn()"
+              (click)="logout()" type="button"
             >
-              <mat-icon class="icon">input</mat-icon>
-              <span class="label">LogOut</span>
+              <mat-icon class="icon">input</mat-icon>&nbsp;
+              <span class="label">LogOut(<span class="small">{{auth.getUser().name}}</span>)</span>
             </a>
           </li>
         </ul>
