--- a/client/src/app/login-component/login-component.component.css
+++ b/client/src/app/login-component/login-component.component.css
@@ -2,6 +2,7 @@
   min-width: 150px;
   max-width: 500px;
   width: 100%;
+  margin: 0 auto;
 }
 
 .full-width {
@@ -11,4 +12,3 @@
 .title {
   margin: 0 auto;
 }
- 
