--- a/client/src/app/login-component/login-component.component.html
+++ b/client/src/app/login-component/login-component.component.html
@@ -1,25 +1,26 @@
-<mat-toolbar >
-  <span class="title">LOGIN</span>
-</mat-toolbar>
+
+    <mat-toolbar >
+      <span class="title">LOGIN</span>
+    </mat-toolbar>
 
 		<mat-card class="my-card">
 		 <span class= "contenu">
 		   <mat-card-content>
-		  
+
 			  <form class="my-form">
 				 <mat-form-field class="full-width">
-					<mat-label>Email</mat-label>
-					<input  matInput  placeholder="Email" name="email">
+					<mat-label>Username</mat-label>
+					<input  matInput [(ngModel)]="user.username" placeholder="username" name="username" required>
 				 </mat-form-field>
 				 <mat-form-field class="full-width">
 					<mat-label>Password</mat-label>
-					<input  matInput  placeholder="Password" name="password">
-				 </mat-form-field>
+					<input  matInput [(ngModel)]="user.password" placeholder="Password" name="password" type="password" required>
+         </mat-form-field>
+          <mat-card-actions>
+            <button style="margin-left: 43%" mat-raised-button (click)="login()" color="primary">LOGIN</button>
+          </mat-card-actions>
+          <div style="text-align: center" ><span style="color:red;">{{message}}</span></div>
 			  </form>
-			 
-		   </mat-card-content>
-		   <mat-card-actions>
-			  <button mat-raised-button (click)="login()" color="primary">LOGIN</button>
-		   </mat-card-actions>
-		   </span>
+        </mat-card-content>
+        </span>
 		</mat-card>
