--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -18,19 +18,18 @@
             <h3>List of diagrams </h3>
           </mat-card-title>
 
-          <mat-grid-list cols="3">
+          <mat-grid-list cols="3" class="large">
             <mat-grid-tile
-                colspan="1">
+                colspan="1" class="large">
               Liste ici
             </mat-grid-tile>
             <mat-grid-tile
-                colspan="2">
-              <div style="width: 100%;height: 100%;"></div>
+                colspan="2" class="large">
+              <div style="width: 100%;height: 100%;" id="root"></div>
             </mat-grid-tile>
           </mat-grid-list>
 
         </mat-card>
-        <script src="go.js"></script>
       </div>
     </div>
   </div>
