--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -1,8 +1,6 @@
-.card {
-
- 
+.large {
+  height: 500px;
 }
-
 .example-container {
   display: flex;
   flex-direction: column;
@@ -26,17 +24,17 @@ fab {
    border-radius: 50%;
    box-shadow: 0 6px 10px 0 #666;
    transition: all 0.1s ease-in-out;
- 
+
    font-size: 50px;
    color: white;
    text-align: center;
    line-height: 70px;
- 
+
    position: fixed;
    right: 50px;
    bottom: 50px;
 }
- 
+
 .fab:hover {
    box-shadow: 0 6px 14px 0 #666;
    transform: scale(1.05);
