--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="co">
   <br>
   <div class="container">
     <div class>
@@ -11,20 +11,31 @@
       </div>
     </div>
     <br>
-    <div class="container">
-      <div >
+    <div class="container" id="cont">
+      <div>
         <mat-card class="card" >
             <mat-card-title >
-                <h3>List of diagrams </h3>
+                <h3><u>List of diagrams</u></h3>
             </mat-card-title>
 
           <mat-grid-list cols="8" class="large">
             <mat-grid-tile colspan="2" rowspan="2" class="largpe">
                 <mat-list>
-                  Liste ici
+                    <mat-card style="min-width: 290px; margin:10px; height: 30px;" *ngFor="let diag of diagrams">
+                        <span style="min-width: 60%;" (click)="loadDiagram(diag.id)">
+                          {{ diag.title }}
+                        </span>
+                        <span style="float: right;">
+                          <button mat-button [matMenuTriggerFor]="menu"><mat-icon class="mat-8">more_vert</mat-icon></button>
+                          <mat-menu #menu="matMenu">
+                            <button mat-menu-item (click)="editDiagram(diag.id)">edit</button>
+                            <button mat-menu-item (click)="deleteDiagram(diag.id)">delete</button>
+                          </mat-menu>
+                        </span>
+                    </mat-card>
                 </mat-list>
             </mat-grid-tile>
-            <mat-grid-tile colspan="5" rowspan="2" class="large" style="border: 1px solid black">
+            <mat-grid-tile colspan="5" rowspan="2" class="large" style="border: 1px solid black; box-shadow:3px 3px 3px 5px lightgray">
               <div #graphContainer style="width: 100%;height: 100%;" id="graphContainer"></div>
               <div id="contextMenu">
                 <ul>
