--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -15,7 +15,7 @@
        </a>
       <a mat-list-item
          routerLink="/dashboard">
-        <mat-icon class="icon">dashboard</mat-icon>
+       <!-- <mat-icon class="icon">dashboard</mat-icon> -->
         <span class="label">Dashboard</span>
       </a>
 	  
@@ -55,7 +55,7 @@
           <li>
             <a
               routerLink="/dashboard">
-              <mat-icon class="icon">dashboard</mat-icon>
+              <!-- <mat-icon class="icon">dashboard</mat-icon> -->
               <span class="label">Dashboard</span>
             </a>
           </li>
