--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,7 @@
         </div>
         <div class="blocks">
           <a button mat-raised-button color="primary" routerLink="/login">
-            <mat-icon>input</mat-icon>Login to see your last diagram
+            <!-- <mat-icon>input</mat-icon> --> Login to see your last diagram
           </a>
         </div>
       </div>
