--- a/client/src/app/login-component/login-component.component.html
+++ b/client/src/app/login-component/login-component.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar >
   <span class="title">LOGIN</span>
 </mat-toolbar>
-
+	<div class = "container">
 		<mat-card class="my-card">
 		 <span class= "contenu">
 		   <mat-card-content>
@@ -23,3 +23,4 @@
 		   </mat-card-actions>
 		   </span>
 		</mat-card>
+</div>
